--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
 <html>
 	<head>
 		<title>Celebration of Life</title>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="assets/css/main.css" />
-		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<meta property="og:title" content="Celebration of Life"/>
 		<meta property="og:description" content='Petra "Cleo" A. Gutierrez, 03 June 1962 - 21 August 2022'/>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes" />
+		<link rel="stylesheet" href="assets/css/main.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		
 		
 		<!-- FONTS-->
